# HLATypingTools

./: .gitignore  README.md  pyproject.toml  run_unit_tests.py
data/: data.pickle.aes
hlatypingtools/: __init__.py  decrypt_file.py  get_info.py
hlatypingtools/data/: data.pickle.aes
tests/: test_get_info.py  test_opening_data.py
