[tool.poetry]
name = "hlatypingtools"
version = "1.0.8.1"
description = ""
authors = ["JasonMendoza2008 <lhotteromain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
pyaescrypt = "^6.0.0"
pandas-stubs = "^2.0.0.230412"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-mypy = "^0.10.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
